--- a/src/app/sections/welcome-section/welcome-section.component.html
+++ b/src/app/sections/welcome-section/welcome-section.component.html
@@ -2,7 +2,7 @@
 <div >
     <h3 >Welkom</h3>
     <p>
-        Welkom op Boerderijcamping Tiswatis!<br />
+        Welkom op Boerderijcamping Tiswatis<br />
         <br />
         Geniet van de rust en natuur op onze charmante boerderijcamping gelegen in het pittoreske Leermens, in het prachtige noorden van Nederland. Onze camping biedt u een unieke ervaring waarbij u kunt ontsnappen aan de drukte van het dagelijkse leven en kunt genieten van de eenvoudige geneugten van het platteland.<br />
         <br />
