--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -10,9 +10,9 @@ Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! 
     </p>
     <p>
       Telefoon:&nbsp;
-      <a title="Telefoonnummer Tis wat tis" href="tel:0000000000000">00000000000</a>&nbsp;(bereikbaar van ma-za, op zondag is de receptie gesloten)<br />
+      <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
-      <a href="mailto:info@aagjeshoeve.nl"> info&#64;aagjeshoeve.nl</a>
+      <a href="mailto:tiswatis@gmail.nl"> tiswatis#64;gmail.nl</a>
     </p>
     <p>
     </p>
