added more genericity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 
 <app-header-bar></app-header-bar>
 <router-outlet />
+<app-parallax-image [style]="{position:'absolute'}"></app-parallax-image>
 <app-section ><app-welcome-section></app-welcome-section></app-section>
 <app-section ><app-accomodation-section></app-accomodation-section></app-section>
 <app-section ><app-tarieven-section></app-tarieven-section></app-section>
 <app-section ><app-activity-section></app-activity-section></app-section>
 <app-section ><app-omgeving-section></app-omgeving-section></app-section>
 <app-section ><app-contact-section></app-contact-section></app-section>
+
