--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -5,16 +5,12 @@
     <p>
         Neem contact met ons op<br />
         <br />
-Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! U kunt ons bereiken via de volgende contactgegevens:<br />
-      <span><span><strong>Boerencamping Tis wat tis</strong><br /></span>Dieftilweg 4<br />9912 TA Leermens</span>
-    </p>
-    <p>
+Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! U kunt ons bereiken via de volgende contactgegevens:<br /><br />
+      <span><span><strong>Boerencamping Tis wat tis</strong><br /></span>Dieftilweg 4<br />9912 TA Leermens<br />
       Telefoon:&nbsp;
       <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
-      <a href="mailto:tiswatis@gmail.nl"> tiswatis#64;gmail.nl</a>
-    </p>
-    <p>
+      <a href="mailto:tiswatis@gmail.nl"> tiswatis#64;gmail.nl</a></span>
     </p>
   </div>
 </div>
