--- a/src/app/parallax-image/parallax-image.component.html
+++ b/src/app/parallax-image/parallax-image.component.html
@@ -1,3 +1,3 @@
-<div class="image-modal">
-    <img [src]="data.imageSrc" alt="Enlarged Image">
+<div class="parallax-container" [style.top.px]="top" [style.left.px]="left">
+    <img [style]="{'transform': 'translateY(' + offset + 'px)'}" [src]="imageSrc" alt="Parallax Image" (click)="openImageModal()">
 </div>
