--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,3 +68,6 @@ h1 {
  	font-size:25px; 
   position:relative;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
