--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -10,7 +10,7 @@ Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! 
       Telefoon:&nbsp;
       <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
-      <a href="mailto:tiswatis@outlook.com"> tiswatis@outlook.com</a></span>
+      <a href="mailto:tiswatis@outlook.com"> tiswatis&#64;outlook.com</a></span>
     </p>
   </div>
 </div>
