--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -6,7 +6,7 @@
         Neem contact met ons op<br />
         <br />
 Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! U kunt ons bereiken via de volgende contactgegevens:<br /><br />
-      <span><span><strong>Boerencamping Tis wat tis</strong><br /></span>Dieftilweg 4<br />9912 TA Leermens<br />
+      <span><span><strong>Boerderijcamping Tis wat tis</strong><br /></span>Dieftilweg 4<br />9912 TA Leermens<br />
       Telefoon:&nbsp;
       <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
