--- a/src/app/sections/accomodation-section/accomodation-section.component.html
+++ b/src/app/sections/accomodation-section/accomodation-section.component.html
@@ -1,16 +1,13 @@
 <div id="voorzieningen" class="topFiller"></div>
 <div >
     <h3>Voorzieningen</h3>
-    <p>
-Onze boerderijcamping biedt u alle basisvoorzieningen voor een comfortabel en aangenaam verblijf:<br />
+<p>
+Onze camping is het hele jaar geopend en beschikt over:<br />
 <br />
-Ruime campeerplaatsen met elektriciteitsaansluiting
-<br />
-Schone sanitairgebouwen met douches en toiletten
-<br />
-Gezellige gemeenschappelijke ruimte met zitgelegenheid en informatie over de omgeving.
-<br />
-Interactie met onze dieren, inclusief de twee vriendelijke golden retrievers
-<br />
+Ruime kampeerplaatsen voor campers, caravans, vouwwagens en tenten.<br />
+Gratis douches voor al onze gasten.<br />
+Elektriciteitsaansluiting (max. 6 Ampère), waarbij de eerste 4 kWh gratis zijn. Daarna wordt €0,35 per kWh in rekening gebracht.<br />
+Toeristenbelasting van €1,60 per persoon per nacht.<br />
+Let op: Huisdieren zijn niet toegestaan vanwege onze loslopende kippen, eenden, honden en katten.<br />
     </p>
 </div>
