--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -11,6 +11,7 @@ Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! 
       <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
       <a href="mailto:tiswatis@outlook.com"> tiswatis&#64;outlook.com</a></span>
+      <span>Wij kijken ernaar uit u te verwelkomen op onze rustige en sfeervolle camping in het mooie Groningen!</span>
     </p>
   </div>
 </div>
