--- a/src/app/sections/omgeving-section/omgeving-section.component.html
+++ b/src/app/sections/omgeving-section/omgeving-section.component.html
@@ -1,8 +1,5 @@
 <div id="omgeving" class="topFiller"></div>
 <div>
     <h3>Omgeving</h3>
-    <p>Ontdek de prachtige omgeving van Leermens<br />
-<br />
-        Leermens is een schilderachtig dorpje gelegen in de provincie Groningen. Het is de perfecte uitvalsbasis voor wandel- en fietsliefhebbers die willen genieten van het weidse landschap, de historische dorpen en de serene rust van het noorden. Bezoek nabijgelegen bezienswaardigheden zoals de Waddenzee, een UNESCO-werelderfgoed, of de historische stad Groningen met haar bruisende cultuur en gezellige terrasjes.</p>
-
+    <p>De camping ligt in een prachtige omgeving die zich uitstekend leent voor wandel- en fietstochten. Met Appingedam op slechts 6 km afstand, kunt u genieten van de historische charme van deze stad, terwijl u de rust en natuur van het platteland ervaart. In de nabijheid van onze camping vindt u diverse fiets- en wandelroutes, ideaal voor natuurliefhebbers en avonturiers. Vergeet niet om het restaurant op loopafstand te bezoeken voor een heerlijke maaltijd na een dag vol activiteiten.
 </div>
