--- a/src/app/sections/tarieven-section/tarieven-section.component.html
+++ b/src/app/sections/tarieven-section/tarieven-section.component.html
@@ -1,11 +1,13 @@
 <div id="tarieven" class="topFiller"></div>
 <div id="tarieven">
     <h3>Tarieven</h3>
-    <p>Betaalbaar kamperen in een prachtige omgeving<br />
+    <p>Onze tarieven zijn gebaseerd op 2 personen per nacht en zijn als volgt:<br />
         <br />
-        €19 per nacht per kampeerplaats<br />
+        Voor SVR-donateurs: €21,50 per nacht, het hele jaar door.<br />
+        Voor niet-SVR-donateurs: €23,50 per nacht, het hele jaar door.<br />
+        Trekkerstent (zonder elektra): €13,00 per nacht voor 2 personen.<br />
+        Toeristenbelasting: €1,60 per persoon per nacht.<br />
         <br />
-        Speciale tarieven voor lange verblijven en groepen op aanvraag<br />
-        Inclusief in de prijs zijn elektriciteitsaansluiting en gebruik van sanitair.</p>
+        Electra: De eerste 4 kWh zijn gratis, daarna €0,35 per kWh.<br />
    
 </div>
