added activity text, adjusted auto height for sections

--- a/src/app/sections/activity-section/activity-section.component.html
+++ b/src/app/sections/activity-section/activity-section.component.html
@@ -1,8 +1,23 @@
 <div id="activiteiten" class="topFiller"></div>
 <div >
     <h3>Activiteiten</h3>
-    <p class="firstPar post-it">Hier geen poespas, maar gewoon lekker genieten van de natuur, de rust en het boerenleven. </p>
-    <p class="secondPar post-it"> Onze boerderij ligt midden in het Groningse platteland, omringd door uitgestrekte weilanden. Kom langs, haal adem, en geniet van het boerenleven.</p>
-    <p class="thirdPar post-it">We hebben ruime staanplaatsen, schoon sanitair en er zijn volop mogelijkheden om te wandelen, fietsen en te genieten van de stilte.</p>
-    <p class="fourthPar post-it">'t Is wat 't is, en dat is precies goed zo. Of je nou wilt kamperen in je tentje, caravan of camper, bij ons ben je aan het juiste adres.</p>    
+<p>
+    Mini Camping "Tiswatis" is ideaal gelegen voor zowel actieve vakantiegangers als rustzoekers. Hier zijn enkele van de hoogtepunten die u kunt verkennen tijdens uw verblijf:<br />
+    <br />
+    1. Verken de Historische Stad Appingedam<br />
+    Op slechts 6 km van de camping ligt de pittoreske stad Appingedam, beroemd om zijn "hangende keukens" boven de Damsterdiep en zijn historische binnenstad. Wandel door de smalle straatjes, bezoek de prachtige Nicolaïkerk en ontdek de rijke geschiedenis van deze charmante stad. Appingedam biedt ook diverse musea, winkels en gezellige terrasjes waar u kunt genieten van een kopje koffie of een lokale lekkernij.<br />
+    <br />
+    2. Fiets- en Wandelroutes<br />
+    De omgeving van Mini Camping "Tiswatis" is een paradijs voor fietsers en wandelaars. De camping ligt te midden van een uitgebreid netwerk van goed onderhouden paden die u door het prachtige Groninger landschap leiden. Of u nu kiest voor een korte wandeling of een langere fietstocht, u zult genieten van de rust, de ruimte en de afwisseling van het landschap.<br />
+    <br />
+    3. Bezoek aan Borgen en Staeten<br />
+    De Ommelanden, de streek rondom de camping, staat bekend om zijn vele borgen en statige herenhuizen, zoals de beroemde Menkemaborg en de Fraeylemaborg. Deze historische gebouwen, vaak omringd door prachtige tuinen en parken, bieden een fascinerend kijkje in de rijke geschiedenis en cultuur van de regio. Veel borgen zijn opengesteld voor bezoekers en bieden rondleidingen, tentoonstellingen en soms zelfs evenementen.<br />
+    <br />
+    4. Sterrenkijken<br />
+    Dankzij de afwezigheid van lichtvervuiling is Mini Camping "Tiswatis" een uitstekende plek voor sterrenkijkers en hobby-astronomen. Op heldere nachten biedt de donkere hemel een adembenemend uitzicht op de sterren, planeten en misschien zelfs de Melkweg. Neem uw telescoop mee en geniet van een onvergetelijke nacht onder de sterren.<br />
+    <br />
+    5. Natuurlijke Rust en Stilte<br />
+    Als u op zoek bent naar een plek om echt tot rust te komen, dan is Mini Camping "Tiswatis" de perfecte keuze. De serene omgeving, het geluid van zingende vogels en het zachte ruisen van de wind door de bomen zorgen voor een ontspannende sfeer. Neem een goed boek mee, geniet van een picknick of doe simpelweg niets en laat de stress van het dagelijks leven achter u.<br />
+
+</p>
 </div>
