--- a/src/app/sections/section/section.component.scss
+++ b/src/app/sections/section/section.component.scss
@@ -27,7 +27,7 @@
   .section {
     width: 100%;
     max-width: 1450px;
-    height: 800px;
+    height: auto;
     overflow: visible;
     background-color: #ecf8eb;
     margin: 200px auto 0 auto;
