--- a/src/app/parallax-image/parallax-image.component.scss
+++ b/src/app/parallax-image/parallax-image.component.scss
@@ -5,8 +5,8 @@
 }
 
 .parallax-container img {
-    position: absolute;
-    width: 100%; /* Adjust as needed */
+    position: relative;
+    width: 500px; /* Adjust as needed */
     height: auto;
     top: 0;
     left: 0;
