--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <app-header-bar></app-header-bar>
 <router-outlet />
-<app-parallax-image [style]="{position:'absolute'}"></app-parallax-image>
+@for (image of images; track image) {
+    <app-parallax-image [style]="{position:'absolute'}" [imageSrc]="image.imageSrc" [top]="image.top" [left]="image.left"></app-parallax-image>
+  }
 <app-section ><app-welcome-section></app-welcome-section></app-section>
 <app-section ><app-accomodation-section></app-accomodation-section></app-section>
 <app-section ><app-tarieven-section></app-tarieven-section></app-section>
