--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,17 @@ h3 {
     position:relative;
     top:60px;
 }
+.imageReel {
+  width:300px;
+  position:absolute;
+  left:0;
+  top:200px;
+}
+.textReel {
+  position:absolute;
+  left:400px;
+  top:200px;
+}
 .firstPar {
     position:relative;
     width:300px;
