updated address, added third party logos, todo: add link, positioning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   }
 </div>
 <div class="textReel">
+  <app-draggable-console></app-draggable-console>
   <app-section ><app-welcome-section></app-welcome-section></app-section>
   <app-section ><app-accomodation-section></app-accomodation-section></app-section>
   <app-section ><app-tarieven-section></app-tarieven-section></app-section>
