--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -6,12 +6,23 @@
         Neem contact met ons op<br />
         <br />
 Heeft u vragen of wilt u een reservering maken? Wij staan klaar om u te helpen! U kunt ons bereiken via de volgende contactgegevens:<br /><br />
-      <span><span><strong>Boerderijcamping Tis wat tis</strong><br /></span>Dieftilweg 4<br />9912 TA Leermens<br />
+      <span><span><strong>Boerderijcamping Tis wat tis</strong><br /></span>Dieftilweg 4a<br />9912 TA Leermens<br />
       Telefoon:&nbsp;
       <a title="Telefoonnummer Tis wat tis" href="tel:+31620099729">06 20099729</a>&nbsp;<br />
       E-mail:&nbsp;
-      <a href="mailto:tiswatis@outlook.com"> tiswatis&#64;outlook.com</a></span>
+      <a href="mailto:tiswatis@outlook.com"> tiswatis&#64;outlook.com</a></span><br />
       <span>Wij kijken ernaar uit u te verwelkomen op onze rustige en sfeervolle camping in het mooie Groningen!</span>
-    </p>
+      
+      <div class="bannerContainer">
+        <img class="img-responsive img"
+          src="assets/logo-svr.png"
+          alt="Stichting Vrije Recreatie">
+        </div>
+      <div class="bannerContainer"><a href="http://www.kamperen-bij-de-boer.com/" target="_blank"
+        title="Kamperen bij de boer.com - Het boerencamping overzicht van Nederland"><img class="img-responsive img"
+          src="http://www.kamperen-bij-de-boer.com/images/nieuwsbrief-header.png"  width="500" height="98"
+          alt="Kamperen bij de boer.com - Het boerencamping overzicht van Nederland"></a>
+          
+      </div>
   </div>
 </div>
