added button functionality

--- a/src/app/drag-console/drag-console.component.html
+++ b/src/app/drag-console/drag-console.component.html
@@ -17,4 +17,9 @@
       /><br />
     </div>
   </div>
+  <div>
+    <app-chat-popup></app-chat-popup>
+    <app-help-popup></app-help-popup>
+    <app-config-popup></app-config-popup>
+  </div>
   
